# uosql-server

./: Cargo.toml
server/: Cargo.toml  server.rs
server/examples/: bstar.rs  parser.rs  query.rs  table_test.rs
server/src/: conn.rs  lib.rs  logger.rs  query.rs
server/src/net/: mod.rs  types.rs
server/src/parse/: ast.rs  lex.rs  mod.rs  parser.rs  tests.rs  token.rs
server/src/storage/: bstar.rs  data.rs  meta.rs  mod.rs  types.rs
server/src/storage/engine/: flatfile.rs
src/: lib.rs
src/client/: main.rs  specialcrate.rs
src/client/native/: build.rs
src/webclient/: main.rs
