[package]
name = "uosql"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
build = "src/client/native/build.rs"

[lib]
name = "uosql"
path = "src/lib.rs"

[[bin]]
name = "uosql-client"
path = "src/client/main.rs"

[[bin]]
name = "web-client"
path = "src/webclient/main.rs"

[dependencies]
log = "0.4.8"
byteorder = "1.3.4"
bincode = "1.2.1"
docopt = "1.1.0"
rustc-serialize = "0.3.24"
nickel = "0.11.0"
plugin = "0.2.6"
typemap = "0.3.3"
hyper = "0.13.2"
cookie = "0.13.3"
url = "2.1.1"
ncurses = "5.99.0"
rand = "0.7.3"
regex = "1.3.4"
libc = "0.2.66"

[dependencies.server]
path = "server"

[build-dependencies]
gcc = "0.3.55"
