[package]
name = "uosql"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
build = "src/client/native/build.rs"

[lib]
name = "uosql"
path = "src/lib.rs"

[[bin]]
name = "uosql-client"
path = "src/client/main.rs"

[[bin]]
name = "web-client"
path = "src/webclient/main.rs"

[dependencies]
bincode = "1.2.1"
byteorder = "1.3.4"
cookie = "0.13.3"
docopt = "1.1.0"
hyper = "0.13.2"
libc = "0.2.66"
log = "0.4.8"
ncurses = "5.99.0"
nickel = "0.11.0"
plugin = "0.2.6"
rand = "0.7.3"
regex = "1.3.4"
serde = "1.0.104"
typemap = "0.3.3"
url = "2.1.1"

[dependencies.server]
path = "server"

[build-dependencies]
cc = "1.0.50"
