[package]
name = "server"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[[bin]]
name = "uosql-server"
path = "server.rs"

[dependencies]
bincode = "1.2.1"
byteorder = "1.3.4"
docopt = "1.1.0"
log = "0.4.8"
serde = "1.0.104"
serde_json = "1.0.47"
term-painter = "0.2.4"
